style.css
:root {
    --background-blue: #F5FAFF;
    --darker-blue: rgb(226, 242, 255);
    --title-blue: #b3d9ff;
    --heading-color: #16466C;
    --anchor-color: #204A87;
}

* {
    font-family: Helvetica, sans-serif;
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

body {
    background: white url("./assets/bg.png") repeat;
    color: #202020;
    display: flex;
    flex-direction: column;
    align-items: center;
    overflow-y: scroll;
    margin-bottom: 100px;
}

header,
main {
    width: 700px;
}

header {
    margin-top: 50px;
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 20px;
}

header h1 {
    text-align: center;
}

a,
a:visited,
time {
    color: var(--anchor-color);
}


.banner {
    position: relative;
    display: flex;
    justify-content: center;
}

.banner img {
    width: 100%;
    height: auto;
    border: 2px solid var(--title-blue);
}

.intro {
    display: flex;
    flex-direction: column;
    gap: 5px;
    position: absolute;
    left: 80px;
    top: 15px;
}

.intro h1 {
    font-size: 25px;
}

.intro p {
    font-size: 15px;
}

nav {
    display: flex;
    gap: 20px;
}

main {
    margin-top: 50px;
    display: flex;
    flex-direction: column;
}

article {
    display: flex;
    flex-direction: column;
}

article .head {
    display: flex;
    flex-direction: column;
}

article p {
    font-size: 17px;
    line-height: 25px;
    margin-top: 16px;
}

@media screen and (max-width: 800px) {

    header,
    main {
        width: 90%;
    }

}

@media screen and (max-width: 600px) {
    .banner .intro {
        left: 15%;
    }

    .intro h1 {
        font-size: 20px;
    }

    .intro p {
        font-size: 15px;
    }
}


.color-line {
    width: 100%;
    height: 10px;
    background-color: var(--title-blue);
}

article .content {
    background-color: var(--background-blue);
    padding: 10px;
    border-radius: 0 0 15px 15px;
}

article .head {
    background-color: var(--title-blue);
    padding: 10px;
    border-radius: 15px 15px 0 0;
    gap: 5px;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    color: var(--heading-color);
}

